Tränat på div-boxar och klasser, margin, padding mm

--- a/kapitel-3/bloggen/index.html
+++ b/kapitel-3/bloggen/index.html
@@ -13,19 +13,19 @@
     <div class="sidan">
         <h1>Min blogg</h1>
         <div class="inlägg">
-            <img src="./bilder/adfvbf.webp" alt="">
+            <img src="./bilder/OIP.jpg" alt="">
             <h2>Gym</h2>
             <p class="datum">Söndag 6 oktober</p>
             <p>Jag gymmade i allstars</p>
         </div>
         <div class="inlägg">
-            <img src="./bilder/fevgfr.jpg" alt="">
+            <img src="./bilder/back-view-men-watching-football-game-tv-sitting-sofa.webp" alt="">
             <h2>Footbolls match</h2>
             <p class="datum">Måndag 7 oktober</p>
             <p>Jag kollade på footboll</p>
         </div>
         <div class="inlägg">
-            <img src="./bilder/pizza.jpg" alt="">
+            <img src="./bilder/turns-out-marvel-fans-dont-really-want-to-watch-movies-in-th_psgw.h720.webp" alt="">
             <h2>Film</h2>
             <p class="datum">Tisdag 8 oktober</p>
             <p>Kollade på film</p>
