--- a/kapitel-4/skapa eget portofolio/index.html
+++ b/kapitel-4/skapa eget portofolio/index.html
@@ -14,14 +14,9 @@
         <h2>Nasa exploration</h2>
 
         <div class="bild">
-            <img src="./bilder/as17-134-20425~large.jpg" alt="">
-            <h3>Astronaut Harrison Schmitt Collects Lunar Rake Samples</h3>
-            <p>Scientist-astronaut Harrison H. Schmitt, lunar module pilot, collects lunar rake samples at Station 1
-                during the first Apollo 17 extravehicular activity (EVA) at the Taurus-Littrow landing site. This
-                picture was taken by astronaut Eugene Cernan, commander
-                . The lunar rake, an Apollo lunar geology hand tool, is
-                used to collect discrete samples of rocks and rock chips ranging in size from one-half inch
-                (1.3 centimeter) to one inch (2.5 centimeter).</p>
+            <img src="./bilder/MMA-Sparring.jpg" alt="">
+            <h3></h3>
+            <p>När jag har tid(oftast fredagar, lördagar och söndagar) gillar jag att träna mma och gymma, mer specifikt i all stars training center som ligger vid solna. Jag anslöt mig i all stars för 7 månader då jag blev rekommenderad av min vän som </p>
         </div>
 
         <div class="bild">
