--- a/kapitel-4/skapa eget portofolio/index.html
+++ b/kapitel-4/skapa eget portofolio/index.html
@@ -8,55 +8,52 @@
     <link rel="stylesheet" href="style.css">
 </head>
 
+
+
 <body>
+
+
     <div class="kontainer">
-        <h1>Moon Exploration</h1>
-        <h2>Nasa exploration</h2>
+        <h1>Min Portofolio</h1>
+        <h2>Kort Presentation Om Mig Själv</h2>
 
-        <div class="bild">
+        <div class="ruta">
+
+
+            <p> Hej jag heter Georgios Kalanidis och bor i Tensta.
+                Jag är 17 år gammal, mina rötter är från Grekland men jag är född i Sverige. Mina 3 största intressen är
+                att träna, spela tv-spel och kolla på fotboll </p>
+        </div>
+
+        <div class="ruta">
+
             <img src="./bilder/MMA-Sparring.jpg" alt="">
-            <h3></h3>
-            <p>När jag har tid(oftast fredagar, lördagar och söndagar) gillar jag att träna mma och gymma, mer specifikt i all stars training center som ligger vid solna. Jag anslöt mig i all stars för 7 månader då jag blev rekommenderad av min vän som </p>
+            <p>När jag har tid(oftast fredagar, lördagar och söndagar) gillar jag att träna mma och gymma, mer specifikt
+                i all stars training center som ligger vid solna.
+                Jag anslöt mig i all stars för 7 månader sedan, då jag blev rekommenderad av min vän som tyckte att det
+                var ett perfekt ställe för oss att utveckla både vår fysik och våran tekniska färdigheter inom MMA.
+                Sedan dess har jag verkligen märkt en förbättring i min kondition, styrka och fokus. Träningspassen är
+                intensiva, och tränarna är både kunniga och motiverande, vilket gör att jag alltid ser fram emot att gå
+                dit. </p>
         </div>
 
-        <div class="bild">
-            <img src="./bilder/2-apollo-15-on-moon-1.webp" alt="">
-            <h3>2-apollo-15-on-moon-1</h3>
-            <p>Apollo Astronaut James B. Irwin, lunar module pilot, works at the Lunar Roving Vehicle during the
-                first Apollo 15 lunar surface extravehicular activity (EVA) at
-                the Hadley-Apennine landing site. The shadow of the Lunar Module "Falcon" is in the foreground. This
-                view is
-                looking northeast, with Mount Hadley in the background.
-                This photograph was taken by astronaut David R. Scott, commander.</p>
+        <div class="ruta">
+            <img src="./bilder/OIP.jpg" alt="">
+
+            <p>När jag är hemma och har tid så gillar jag oftast att spela tv-spel, både själv men även med vänner.
+                Några spel som jag spelar just nu är Ufc 5, Shadow of war och Assasians Creed. Mest på grund av att dem erbjuder spännande och engagerande upplevelser med både intensiva actionmoment och intressanta berättelser. </p>
         </div>
 
-        <div class="bild">
-            <img src="./bilder/6903870~large (1).jpg" alt="">
-            <h3>Saturn Apollo Program</h3>
-            <p>The second manned lunar landing mission, Apollo 12 launched from launch pad 39-A at Kennedy Space Center
-                in
-                Florida on November 14, 1969 via a Saturn Five launch vehicle.
-                The Saturn V vehicle was developed by the Marshall Space Flight Center (MSFC) under the direction of Dr.
-                Wernher von Braun. Aboard Apollo 12 was a crew of three astronauts: Alan L. Bean, pilot of the Lunar
-                Module
-                (LM), Intrepid; Richard Gordon, pilot of the Command Module (CM), Yankee Clipper; and Spacecraft
-                Commander
-                Charles Conrad. The LM, Intrepid, landed astronauts Conrad and Bean on the lunar surface in what’s known
-                as
-                the Ocean of Storms while astronaut Richard Gordon piloted the CM, Yankee Clipper, in a parking orbit
-                around
-                the Moon. Their lunar soil activities included the deployment of the Apollo Lunar Surface Experiments
-                Package (ALSEP), finding the unmanned Surveyor 3 that landed on the Moon on April 19, 1967, and
-                collecting
-                75 pounds (34 kilograms) of rock samples. In this photograph, one of the astronauts on the Moon’s
-                surface is
-                holding a container of lunar soil.
-                The other astronaut is seen reflected in his helmet. Apollo 12 safely returned to Earth on November 24,
-                1969.</p>
+        <div class="ruta">
+            <img src="./bilder/5be94bbf703e9.jpg" alt="">
+
+            <p>När min favoritlag(Barcelona) spelar så försöker jag i dem flesta gångerna att se matchen live på TV
+                eller streama den om jag inte har möjlighet att vara hemma. Jag gillar att följa deras spelstil och
+                analysera matcherna, särskilt hur mina favoritspelare presterar. </p>
         </div>
 
-        
-        
+
+
     </div>
 
 </body>
