Tränat på css specificitet,aktiv, göra flera sidor

--- a/kapitel-5/webbplats/sida1.html
+++ b/kapitel-5/webbplats/sida1.html
@@ -12,27 +12,22 @@
     <div class="kontainer">
 
 
-        <h1>Fem Musikband</h1>
+        <h1>Fem Top Artister</h1>
         <ul>
-            <li><a href="sida1.html">Abba</a></li>
-            <li><a href="sida2.html">The Doors</a></li>
-            <li><a href="sida3.html">The Beatles</a></li>
-            <li><a href="sida4.html">Manfred Mann</a></li>
-            <li><a href="sida5.html">Santan</a></li>
+            <li><a href="sida1.html">Eminem</a></li>
+            <li><a href="sida2.html">Kendrick Lamar</a></li>
+            <li><a href="sida3.html">Tupac</a></li>
+            <li><a href="sida4.html">Biggie</a></li>
+            <li><a href="sida5.html">Lil Wayne</a></li>
         </ul>
         <figure>
-            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/c/cb/ABBA_-_TopPop_1974_5.png/375px-ABBA_-_TopPop_1974_5.png"
-                alt="Abba">
-            <figcaption>Andersson, Lyngstad, Fältskog och Ulvaeus i nederländsk TV 1974.</figcaption>
+            <img src="./bilder/Eminem-02-mika.jpg"
+                alt="Eminem">
+            <figcaption>Eminem (2021)</figcaption>
         </figure>
-        <p>Abba (av musikgruppen skrivet ABBA och som logotyp AᗺBA, med det första B:et spegelvänt) är en svensk
-            popgrupp, som var aktiv under en tioårsperiod mellan 1972 och 1982 samt inför lansering av sitt sista
-            studioalbum, utgivet 2021.</p>
-        <p>Gruppen består av de två före detta äkta paren Björn Ulvaeus och Agnetha Fältskog samt Benny Andersson och
-            Anni-Frid "Frida" Lyngstad. Gruppnamnet bildades utifrån initialbokstäverna i medlemmarnas förnamn. Under
-            hela gruppens karriär skrevs musik och text av Andersson och Ulvaeus, och fram till 1977 ibland tillsammans
-            med gruppens manager, Stikkan Anderson</p>
-        <p class="tack">Bild och text från <a href="https://sv.wikipedia.org/wiki/Abba">Wikipedia</a></p>
+        <p>Marshall Bruce Mathers III, mer känd som under sitt artistnamn Eminem (ofta stiliserat EMINƎM), född 17 oktober 1972 i St. Joseph, Missouri,[1] är en amerikansk rappare, låtskrivare och musikproducent.</p>
+        <p>Mathers föddes 17 oktober 1972 i Saint Joseph i Missouri som Marshall Bruce Mathers III och växte mestadels upp i Detroit i Michigan. Artistnamnet Eminem kommer från initialerna i hans namn (M&M, M and M), vars engelska uttal ligger mycket nära det som till slut blev Eminem.</p>
+        <p class="tack">Bild och text från <a href="https://sv.wikipedia.org/wiki/Eminem">Wikipedia</a></p>
         
     </div>
 
