--- a/kapitel-5/jul-webb/sida2.html
+++ b/kapitel-5/jul-webb/sida2.html
@@ -15,7 +15,7 @@
 
         <h1>Jultema</h1>
         <ul>
-            <li><a href="sida1.html">Julgrann</a></li>
+            <li><a href="index.html">Julgrann</a></li>
             <li><a href="sida2.html">Snögubbe</a></li>
             <li><a href="sida3.html">Tomtenissar</a></li>
            
