--- a/kaptiel-7/apwebb/index.html
+++ b/kaptiel-7/apwebb/index.html
@@ -1,39 +1,48 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Appwebb</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
     <div class="kontainer">
         <header>
-<h1>Primater</h1>
-<h2>På apornas planet</h2>
-<nav>
-    <a href="#">Makaker</a>
-    <a href="#">Gorillor
-        <a href="#">Chimpans</a>
-        <a href="#">Gibboner</a>
-    </a>
-</nav>
+            <h1>Primater</h1>
+            <h2>På apornas planet</h2>
+            <nav>
+                <a href="#">Makaker</a>
+                <a href="#">Gorillor </a>
+                <a href="#">Chimpans</a>
+                <a href="#">Gibboner</a>
+            </nav>
         </header>
         <main>
             <h3>Apselfie</h3>
             <figure>
-<img src="https://upload.wikimedia.org/wikipedia/commons/thumb/4/4e/Macaca_nigra_self-portrait_large.jpg/375px-Macaca_nigra_self-portrait_large.jpg" alt="">
-<figcaption>Ett av de omtvistade "selfiefotografierna" som togs av en makakhona på ön Sulawesi i Indonesien 2011.</figcaption>
+                <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/4/4e/Macaca_nigra_self-portrait_large.jpg/375px-Macaca_nigra_self-portrait_large.jpg"
+                    alt="">
+                <figcaption>Ett av de omtvistade "selfiefotografierna" som togs av en makakhona på ön Sulawesi i
+                    Indonesien 2011.</figcaption>
             </figure>
-            <p>Apselfier (eller monkey selfies) är selfier tagna av apor. I ett berömt exempel tog en celebesmakaker bilder med utrustning som tillhörde den brittiska naturfotografen David Slater, inklusive lyckade selfier, vilka har lett till tvister och debatter om upphovsrätt.[1][2] Bilderna togs på ön Sulawesi i Indonesien 2011, efter att Slaters kamera tagits av en makak.[1][3][4][5] Aporna tog hundratals bilder varav ett fåtal var användbara</p>
+            <p>Apselfier (eller monkey selfies) är selfier tagna av apor. I ett berömt exempel tog en celebesmakaker
+                bilder med utrustning som tillhörde den brittiska naturfotografen David Slater, inklusive lyckade
+                selfier, vilka har lett till tvister och debatter om upphovsrätt.[1][2] Bilderna togs på ön Sulawesi i
+                Indonesien 2011, efter att Slaters kamera tagits av en makak.[1][3][4][5] Aporna tog hundratals bilder
+                varav ett fåtal var användbara</p>
 
         </main>
         <aside>
-
+            <h3>Referenser</h3>
+            <p>Den här artikeln är helt eller delvis baserad på material från engelskspråkiga Wikipedia, Monkey selfie, 6 januari 2017.</p>
         </aside>
         <footer>
-
+            <p>&copy; 2025</p>
         </footer>
     </div>
 </body>
+
 </html>
