--- a/kaptiel-7/Wanderer/index.html
+++ b/kaptiel-7/Wanderer/index.html
@@ -19,14 +19,23 @@
     <h1>Space Tourism</h1>
     <nav>
         <a href="index.html">Wanderer</a>
-        <a href="page2.html"></a>
-        <a href="page3.html"></a>
-        <a href="page4.html"></a>
-        <a href="page5.html"></a>
+        <a href="page2.html">Mars</a>
+        <a href="page3.html">Jupiter</a>
+        <a href="page4.html">Europa</a>
+        <a href="page5.html">Enceladus</a>
     </nav>
 </header>
+<main>
+<blockquote>
+    For all its material advantages, the sedentary life has left us edgy, unfulfilled. 
+    Even after 400 generations in villages and cities, we haven’t forgotten. 
+    The open road still softly calls, like a nearly forgotten song of childhood.
+</blockquote>
 
-
+</main>
+<footer>
+    <p>Images and text from Nasa. video by Erik Wernquist</p>
+</footer>
     </div>
 </body>
 </html>
