Tränat på inmatning med prompt och skriva i webbfönstret

--- a/kapitel-8/intro/index.html
+++ b/kapitel-8/intro/index.html
@@ -11,7 +11,8 @@
     <div class="kontainer">
         <h1>Intro till Javascript</h1>
     </div>
-    <script src="./script.js"></script>
+    <!-- <script src="./script.js"></script> -->
+     <script src="./script2.js"></script>
 </body>
 
 </html>
